array.island.Island.scala.error
Erreur de compilation :
Island:5: error: Int does not take parameters
  var tabSize:Int = num.length();
                              ^